--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -48,6 +48,7 @@
 	<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-analytics.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-auth.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-functions.js"></script>
 	<script>
 		var firebaseConfig = {
 			apiKey: "AIzaSyAv8bJonDQFrdWZT1O7HAM-OXzOPIRyg5A",
